--- a/application/_admin/view/zarzadzaniezadaniami/editMenu.phtml
+++ b/application/_admin/view/zarzadzaniezadaniami/editMenu.phtml
@@ -7,4 +7,8 @@
 		<div class="icon"></div>
 		<div class="text"><a href="<?= $this->directoryUrl.'/zarzadzaniezadaniami/editrepair/repairid/'.$this->repair['id']; ?>">Edytuj</a></div>
 	</div>
+    <div class="row">
+		<div class="icon"></div>
+		<div class="text"><a href="<?= $this->directoryUrl.'/zarzadzaniezadaniami/addparts/repairid/'.$this->repair['id']; ?>">Zamów części</a></div>
+	</div>
 </div>
