--- a/application/_admin/view/mechanik/editMenu.phtml
+++ b/application/_admin/view/mechanik/editMenu.phtml
@@ -7,4 +7,8 @@
 		<div class="icon"></div>
 		<div class="text"><a href="<?= $this->directoryUrl.'/mechanik/editrepair/repairid/'.$this->repair['id']; ?>">Zmień status</a></div>
 	</div>
+    <div class="row">
+		<div class="icon"></div>
+		<div class="text"><a href="<?= $this->directoryUrl.'/mechanik/addparts/repairid/'.$this->repair['id']; ?>">Zamów częsci</a></div>
+	</div>
 </div>
