--- a/application/_admin/view/noAuthorized.phtml
+++ b/application/_admin/view/noAuthorized.phtml
@@ -3,7 +3,7 @@
 <head><?= $this->renderContent("const/head.phtml"); ?></head>                                        
 <body>
 
-	<div class="top" style="color: black">Panel zarządzania zakładem mechanicznym</div>
+	<div class="top" style="color: black"></div>
 
 	<?= $this->renderContent("const/errorBox.phtml"); ?>
 
