--- a/application/_page/view/authorized.phtml
+++ b/application/_page/view/authorized.phtml
@@ -9,7 +9,7 @@
 
 	<!-- TOP -->
 	<div class="navigation">
-		<a href="<?= $this->directoryUrl; ?>/index/logout/type/noContent" class="rightLink highlight"><img src="<?= $this->baseUrl; ?>/public/template/<?= $this->_layoutPath; ?>img/admin/logout.png" class="active"/><img src="<?= $this->baseUrl; ?>/public/template/<?= $this->_layoutPath; ?>img/admin/logout_active.png" class="hover"/></a>
+		<a href="<?= $this->directoryUrl; ?>/index/logout/type/noContent" class="rightLink highlight"><img src="<?= $this->baseUrl; ?>/public/template/<?= $this->_layoutPath; ?>img/admin/logout.jpg" class="active"/><img src="<?= $this->baseUrl; ?>/public/template/<?= $this->_layoutPath; ?>img/admin/logout_active.jpg" class="hover"/></a>
 	</div>
 
 
