--- a/application/_admin/view/index/login.phtml
+++ b/application/_admin/view/index/login.phtml
@@ -1,4 +1,5 @@
 <div id="bg" class="heighter">
+	<div class="logo"></div>
 	<div style="color: #fff; text-align: center; text-transform: uppercase; margin-top: 18px; font-size: 19px">Panel zarządzania zakładem mechanicznym</div>
 	<div class="formLogin">
 		<div class="form">                  
