--- a/public/template/styles/_page/main.css
+++ b/public/template/styles/_page/main.css
@@ -322,6 +322,14 @@ a {
 	position: absolute;
 	left: 0px;
 }
+#bg .logo {
+	position: absolute;
+	left: 206px;
+	top: 50px;
+	width: 100px;
+	height: 100px;
+	background: url(../../img/admin/logo.png) no-repeat;
+}
 .bgHolder
 {
 	display: none;
